--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:one": "node taskOne.js",
     "start:two": "node taskTwo.js",
-    "start:three": "node taskThree.js"
+    "start:three": "node taskThree.js",
+    "start:bonus": "node bonusTask.js"
   },
   "author": "Sohail Khan",
   "license": "MIT",
@@ -15,6 +16,7 @@
     "async": "^3.2.4",
     "axios": "^1.4.0",
     "express": "^4.18.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "rxjs": "^7.8.1"
   }
 }
