--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "caremerge-test",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "taskOne.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:one": "node taskOne.js",
